fix: modify gaps to balance the homepage UI layout

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,8 +8,8 @@
   .body {
     display: flex;
     max-width: 100vw;
-    gap: var(--gap);
-    padding: 0 var(--gap) var(--gap) var(--gap);
+    gap: calc(var(--gap) / 2);
+    padding: 0 var(--gap) var(--gap) calc(var(--gap) / 2);
 
     .outletContainer {
       flex: 1;
